# motorSnatcher

./: .gitignore  agent.md  debug_urls.py  generalInfoDiv.txt  motors.csv  pyproject.toml  readme.md  scrape_batteries.py  scrape_battery.py  scrape_motors.py  scrape_product.py  specificationTabDiv.txt  urls.txt
